--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -187,23 +187,23 @@
     // Capture the form inputs 
     $("#submit").on("click", function(){
     	// Form validation
-    	function validateForm() {
-		  var isValid = true;
+    	function validate() {
+		  var valid = true;
 		  $('.form-control').each(function() {
 		    if ( $(this).val() === '' )
-		        isValid = false;
+		        valid = false;
 		  });
 		  $('.chosen-select').each(function() {
 		  	if( $(this).val() === "")
-		  		isValid = false
+		  		valid = false
 		  })
-		  return isValid;
+		  return valid;
 		}
 		// If all required fields are filled
-		if (validateForm() == true)
+		if (validate() == true)
 		{
 			// Create an object for the user's data
-	    	var userData = {
+	    	var userInput = {
 	    		name: $("#name").val(),
 	    		// photo: $("#photo").val(),
 	    		scores: [$("#q1").val(), $("#q2").val(), $("#q3").val(), $("#q4").val(), $("#q5").val(), $("#q6").val(), $("#q7").val(), $("#q8").val(), $("#q9").val(), $("#q10").val(), ]
@@ -211,7 +211,7 @@
 	    	// Grab the URL of the website
 	    	var currentURL = window.location.origin;
 	    	// AJAX post the data to the friends API. 
-	    	$.post(currentURL + "/api/friends", userData, function(data){
+	    	$.post(currentURL + "/api/friends", userInput, function(data){
 	    		// Grab the result from the AJAX post so that the best match's name and photo are displayed.
 	    		$("#matchName").text(data.name);
 	    		$('#matchImg').attr("src", data.photo);
